--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   roscpp
   sensor_msgs
+  OpenCV REQUIRED
 )
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -27,4 +28,7 @@ add_executable(${PROJECT_NAME}
   src/CTUWSim.cpp)
 
 target_link_libraries(${PROJECT_NAME}
-  ${catkin_LIBRARIES})
+  ${catkin_LIBRARIES}
+  ${OpenCV_LIBS}
+  opencv_core
+  opencv_highgui)
